fdo#85247: copy and paste of a slide results in a blue slide in presentation mode.

Seems like "Default" is handled specially or probably
the copy-buffer is broken
This now checks for slide 'type' as well, before cosidering it a duplicate

Change-Id: If8c472bcefb54cee72e7411f92a76b4e2db2b6ce
(cherry picked from commit 0bab8aee77cfc2ffdbc6d3ef6a869284bc12dff4)